[metadata]
name = marvin-brain
version = 0.2.3dev
author = Brian Cherinka
author_email = bcherinka@stsci.edu
description = Core Marvin Brain for SDSS
url = https://github.com/sdss/marvin_brain
project_urls =
	Repository = https://github.com/sdss/marvin_brain
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
package_dir =
	= python
install_requires =
	sdsstools>=0.4.0
	sdss-access>=2.0
    flask>=1.1
    flask_classful>=0.14.2
    requests>=2.23.0
    networkx>=2.5
    sqlalchemy>=1.3
    pyyaml>=5.1
    passlib>=1.7.1
    numpy>=1.18

[options.packages.find]
where =
	python

[options.package_data]
brain =
	data/*

[options.extras_require]
extra=
    msgpack>=1.0
    msgpack_numpy>=0.4
    cachecontrol>=0.12

dev =
	%(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-cov>=2.8.1
	pytest-sugar>=0.9.2
	pytest-mock>=3.3.1
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	psycopg2>=2.9
	astropy>5.0
	# The following are needed because sdsstools[dev] as an extra not always
	# gets installed. See https://github.com/pypa/pip/issues/4957.
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
docs =
	Sphinx>=3.1.0
	sphinx_bootstrap_theme>=0.4.12
[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = brain
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[bdist_wheel]
universal = 1

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov brain --cov-report html -W ignore

[coverage:run]
branch = true
include =
	python/brain/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =

